logo font and spacing fixed

--- a/think-differently/styles/Responsive.css
+++ b/think-differently/styles/Responsive.css
@@ -178,16 +178,17 @@
             text-overflow: ellipsis;
       }
 }
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
       .ant-col-xl-12 {
             display: block;
-            /* flex: 0 0 50%; */
+             flex: 0 0 50%; 
             max-width: 50%;
       }
-}
+} */
 @media (min-width: 768px) {
       .ant-col-md-14 {
             display: block;
+            width: 100%;
             /* flex: 0 0 58.33333333%; */
             /* max-width: 58.33333333%; */
       }
@@ -198,3 +199,14 @@
             font-size: 8px;
       }
 } */
+@media only screen and (min-width: 768px) and (max-width: 1070px) {
+      .nav-items {
+            display: flex;
+            list-style: none;
+            margin-top: 5px;
+            margin-right: -356px;
+            justify-content: space-around;
+
+            /* /* padding: 100px; */
+      }
+}
