--- a/think-differently/styles/style.css
+++ b/think-differently/styles/style.css
@@ -81,13 +81,16 @@ body {
       margin-left: 239px;
       color: darkorange;
       font-family: MyriadPro;
-      margin-top: -2px;
+      margin-top: -20px;
+      font-size: 15px;
+      padding-bottom: 15px;
 }
 .Col-1 h1 {
-      display: inline-block;
+      display: block;
       color: "#231f20" !important;
-      padding-top: 34px;
-      padding-left: 134px;
+      padding-top: 30px;
+      padding-left: 120px;
+      font-size: 36px;
 }
 .Col-1 {
       color: "#231f20";
